Commit v2019.0.5 - Código inteiramente refeito para melhor performance e maior fidelidade à POO. Funcionalidades principais nos painéis para administradores e usuários inclusas junto com algumas das funcionalidades que integrarão a versão final. Diversas melhorias gráficas e no banco de dados.

--- a/Business/Business.csproj
+++ b/Business/Business.csproj
@@ -38,6 +38,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Instituicao.cs" />
+    <Compile Include="Material.cs" />
     <Compile Include="Usuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
