--- a/Interface/Interface.csproj
+++ b/Interface/Interface.csproj
@@ -88,6 +88,12 @@
     <Compile Include="DetalhamentoMaterial.Designer.cs">
       <DependentUpon>DetalhamentoMaterial.cs</DependentUpon>
     </Compile>
+    <Compile Include="HistoricoRegistro.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="HistoricoRegistro.Designer.cs">
+      <DependentUpon>HistoricoRegistro.cs</DependentUpon>
+    </Compile>
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -146,6 +152,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="DetalhamentoMaterial.resx">
       <DependentUpon>DetalhamentoMaterial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="HistoricoRegistro.resx">
+      <DependentUpon>HistoricoRegistro.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
